test/e2e/istio.minimal-operator.yaml
apiVersion: install.istio.io/v1alpha1
kind: IstioOperator
spec:
  values:
    global:
      proxy:
        autoInject: disabled
      useMCP: false
      # The third-party-jwt is not enabled on all k8s.
      # See: https://istio.io/docs/ops/best-practices/security/#configure-third-party-service-account-tokens
      jwtPolicy: first-party-jwt
    # Patch to fix validation error: port http2/80 in gateway cluster-local-gateway 
    # invalid: targetPort is set to 0, which requires root 
    gateways:
      istio-ingressgateway:
        runAsRoot: true

  addonComponents:
    pilot:
      enabled: true
    prometheus:
      enabled: false

  components:
    ingressGateways:
    - name: istio-ingressgateway
      enabled: true
      # Patch to ensure istio-ingressgateway works with Kind cluster
      # with extraPortMappings configuration. Refer to:
      # https://kind.sigs.k8s.io/docs/user/ingress/
      k8s:
        nodeSelector:
          ingress-ready: "true"
        overlays:
        - kind: Deployment
          name: istio-ingressgateway
          patches:
          - path: spec.template.spec.containers.[name:istio-proxy].ports.[containerPort:8080].hostPort
            value: 80
        tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
          operator: Equal
    - name: cluster-local-gateway
      enabled: true
      label:
        istio: cluster-local-gateway
        app: cluster-local-gateway
      k8s:
        service:
          type: ClusterIP
          ports:
          - port: 15020
            name: status-port
          - port: 80
            name: http2
          - port: 443
            name: https
