test/e2e/merlin.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: merlin
spec:
  rules:
  - host: merlin.127.0.0.1.nip.io
    http:
      paths:
      - path: /*
        backend:
          serviceName: merlin
          servicePort: 8080
