test/e2e/mlp.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: mlp
spec:
  rules:
  - host: mlp.127.0.0.1.nip.io
    http:
      paths:
      - path: /*
        backend:
          serviceName: mlp
          servicePort: 8080
