test/e2e/turing.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: turing
spec:
  rules:
  - host: turing.127.0.0.1.nip.io
    http:
      paths:
      - path: /*
        backend:
          serviceName: turing
          servicePort: 8080
