test/e2e/vault.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: vault
spec:
  rules:
  - host: vault.127.0.0.1.nip.io
    http:
      paths:
      - path: /*
        backend:
          serviceName: vault
          servicePort: 8200
